<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:id="@+id/linearlayoutcompact"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_header"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="264dp"
            android:layout_height="280dp"
            android:src="@drawable/delivery_food_"
            android:contentDescription="TODO" />



    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tvname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="start"
        android:text="@string/name"
        android:textColor="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayoutcompact"
        tools:ignore="MissingConstraints" />

    <!--    <com.google.android.material.textfield.TextInputEditText-->
    <!--        android:layout_width="match_parent"-->

    <!--         android:layout_height="wrap_content"-->
    <!--        tools:ignore="MissingConstraints" />-->

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/your_name"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvname" />
    <TextView
        android:id="@+id/tvemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="Email"
        android:textColor="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        tools:ignore="MissingConstraints" />

    <!--    <com.google.android.material.textfield.TextInputEditText-->
    <!--        android:layout_width="match_parent"-->

    <!--         android:layout_height="wrap_content"-->
    <!--        tools:ignore="MissingConstraints" />-->

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="Your Email"

        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvemail"
        />

    <TextView
        android:id="@+id/tvpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/password"
        android:textColor="#757575"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:ignore="MissingConstraints" />

    <!--    <com.google.android.material.textfield.TextInputEditText-->
    <!--        android:layout_width="match_parent"-->

    <!--         android:layout_height="wrap_content"-->
    <!--        tools:ignore="MissingConstraints" />-->

    <EditText
        android:id="@+id/edtPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/your_password"

        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpwd"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonsignup"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:background="#FFC700"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="Sign Up   >>"
        android:textStyle="bold"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPwd"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/textsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="#000"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsignup"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>